[gd_scene load_steps=13 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_1w47b"]
[ext_resource type="PackedScene" uid="uid://ct4hnidrqacu0" path="res://scenes/Components/interacting_component.tscn" id="2_awhmw"]
[ext_resource type="PackedScene" uid="uid://curng0bjom18b" path="res://scenes/Components/health_component.tscn" id="3_sw2dm"]
[ext_resource type="PackedScene" uid="uid://ck4g01ma0b022" path="res://scenes/Components/hurt_box_3d.tscn" id="4_vnb4j"]
[ext_resource type="PackedScene" uid="uid://chuse4uqnjnxw" path="res://scenes/Components/ray_attack_component_3d.tscn" id="5_3tgg3"]
[ext_resource type="PackedScene" uid="uid://b7pefmfsnj1gc" path="res://scenes/Components/inventory_component.tscn" id="5_3vhi2"]
[ext_resource type="PackedScene" uid="uid://ouqfvb7r6tu8" path="res://scenes/Components/ranged_attack_component.tscn" id="6_skuyj"]
[ext_resource type="PackedScene" uid="uid://hd835rtp70qv" path="res://scenes/Weapons/thrown_light_ball.tscn" id="8_5qv4v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]
height = 1.25

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_44vvd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oquny"]
radius = 2.0

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_vj77x"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_1w47b")
base_mouse_sensitivity = 0.003
max_stamina = 4.0

[node name="InteractingComponent" parent="." node_paths=PackedStringArray("ray_cast") instance=ExtResource("2_awhmw")]
ray_cast = NodePath("../Head/RayCast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="HealthComponent" parent="." instance=ExtResource("3_sw2dm")]

[node name="HurtBox3D" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("4_vnb4j")]
collision_layer = 4
collision_mask = 4
_health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox3D"]
shape = SubResource("CapsuleShape3D_44vvd")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.47, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4)
current = true

[node name="RayCast3D" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -2)

[node name="RayAttackComponent3D" parent="Head" node_paths=PackedStringArray("attack_audio_stream") instance=ExtResource("5_3tgg3")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.47, 0)
attack_audio_stream = NodePath("../../MeleeAttackStreamPlayer3D")

[node name="ThrowMarker3D" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, -0.6)

[node name="InventoryComponent" parent="." node_paths=PackedStringArray("pickup_area_3d") instance=ExtResource("5_3vhi2")]
orbs_count = 2
pickup_area_3d = NodePath("../PickupArea3D")

[node name="PickupArea3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea3D"]
shape = SubResource("CylinderShape3D_oquny")

[node name="RangedAttackComponent" parent="." node_paths=PackedStringArray("rotation_reference", "position_reference", "inventory_component", "attack_audio_stream") instance=ExtResource("6_skuyj")]
unique_name_in_owner = true
projectile_scene = ExtResource("8_5qv4v")
rotation_reference = NodePath("../Head/Camera3D")
position_reference = NodePath("../Head/ThrowMarker3D")
initial_velocity = 12.0
inventory_component = NodePath("../InventoryComponent")
attack_audio_stream = NodePath("../RangedAttackStreamPlayer3D")

[node name="CollisionRay3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_vj77x")

[node name="StepDownRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -1.25, 0)

[node name="MeleeAttackStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
volume_db = -10.0
unit_size = 3.0
max_polyphony = 2
bus = &"SFX"

[node name="RangedAttackStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.4, -0.4)
volume_db = -15.0
unit_size = 1.0
max_distance = 50.0
max_polyphony = 2
bus = &"SFX"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.47, 0)
omni_range = 10.0

[connection signal="interactable_focused" from="InteractingComponent" to="." method="_on_interacting_component_interactable_focused"]
[connection signal="interactable_unfocused" from="InteractingComponent" to="." method="_on_interacting_component_interactable_unfocused"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="orbs_count_changed" from="InventoryComponent" to="." method="_on_inventory_component_orbs_count_changed"]
